--- a/app.wxss
+++ b/app.wxss
@@ -1,39 +1,118 @@
+@import "colorui/main.wxss";
+@import "colorui/icon.wxss";
+
 page {
   box-sizing: border-box;
   font-size: 28rpx;
+  background: #fff;
 }
+
 view {
   box-sizing: border-box;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid #ddd;
 }
+
 .fl {
   float: left;
 }
+
+.fr {
+  float: right;
+}
+
 .w25 {
   width: 25%;
 }
+
 .w50 {
   width: 50%;
 }
+
 .w75 {
   width: 75%;
 }
+
+.w100 {
+  width: 100%;
+}
+
+.overhidden {
+  overflow: hidden;
+}
+
 .relative {
   position: relative;
 }
-.user-info i-avatar{
-  margin-right: 20rpx;
+
+.user-info {
+  color: #666;
+  vertical-align: middle;
 }
+
+.user-info .cu-avatar {
+  margin-right: 12rpx;
+}
+
+.user-info .cu-avatar + text {
+  line-height: 64rpx;
+  font-size: 26rpx;
+}
+
 .module-title {
   text-align: center;
   color: #999;
   padding: 10rpx 0;
 }
+
+.center {
+  text-align: center;
+}
+
+.level-2 {
+  color: #999;
+}
+
 .mt20 {
   margin-top: 20rpx;
 }
+
+.mb20 {
+  margin-bottom: 20rpx;
+}
+
+.ml20 {
+  margin-left: 20rpx;
+}
+
 .mt40 {
   margin-top: 40rpx;
+}
+
+.fs10 {
+  font-size: 20rpx;
+}
+
+.fs12 {
+  font-size: 24rpx;
+}
+
+.fs14 {
+  font-size: 28rpx;
+}
+
+.fs16 {
+  font-size: 32rpx;
+}
+.h3 {
+  font-size: 36rpx;
+  font-weight: bold;
+  text-align: center;
+}
+.status {
+  border: 2rpx solid #888;
+  padding: 10rpx 18rpx;
+  font-size: 24rpx;
 }
