--- a/pages/news/news.wxml
+++ b/pages/news/news.wxml
@@ -15,34 +15,30 @@
     <i-tab key="tab2" title="文明秀"></i-tab>
   </i-tabs>
   <view class="new-list" hidden="{{current != 'tab1'}}">
-    <navigator url='./content'>
+    <navigator url='./content' wx:for="{{newList}}" wx:key="item.id">
       <view class="new-list-li">
-        <view class="fl w25">
-          <image src="https://ss2.bdstatic.com/8_V1bjqh_Q23odCf/pacific/1913601244.png" style="width: 100%;height: 200rpx;" />
+        <view class="fl" style='width:240rpx;'>
+          <image class="shadow-blur" src="{{item.src}}" style="width: 100%;height: 180rpx;" />
         </view>
-        <view class="fl w75 relative">
-          <view class="new-title">标题</view>
-          <view class="new-time">时间</view>
+        <view class="fl relative" style='width:calc(100% - 240rpx);padding: 20rpx 20rpx 20rpx 0;'>
+          <view class="new-title">{{item.title}}</view>
+          <view class="new-time">{{item.time}}</view>
         </view>
       </view>
     </navigator>
   </view>
   <view class="civilization-list" hidden="{{current != 'tab2'}}">
-    <navigator url='./content'>
+    <navigator url='./content' wx:for="{{civilizationList}}" wx:key="item.id">
       <view class="civilization-list-li">
         <view class="user-info">
-          <i-avatar>
-            <image class='card-image' src="{{item.newsImage}}"></image>
-          </i-avatar>
-          发布人
+          <image class='cu-avatar round' src="{{item.newsImage}}"></image>
+          <text>{{item.userName}}</text>
         </view>
-        <view class="civilization-title">标题</view>
+        <view class="text-lg">{{item.title}}</view>
         <view class="civilization-img">
           <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=2350171032,3227234175&fm=26&gp=0.jpg" />
-          <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=2350171032,3227234175&fm=26&gp=0.jpg" />
-          <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=2350171032,3227234175&fm=26&gp=0.jpg" />
         </view>
-        <view class="civilization-time">时间</view>
+        <view class="text-sm text-grey">{{item.time}}</view>
       </view>
     </navigator>
   </view>
