--- a/pages/news/news.wxss
+++ b/pages/news/news.wxss
@@ -32,30 +32,31 @@
 }
 
 .new-list-li {
-  height: 240rpx;
+  height: 220rpx;
   border-bottom: 2rpx solid #ddd;
   box-sizing: border-box;
 }
 
 .new-list-li>view {
-  padding: 10rpx;
+  padding: 20rpx;
   height: 100%;
 }
 
 .new-title {
-  font-size: 40rpx;
+  padding-top: 10rpx;
+  font-size: 32rpx;
   color: #666;
 }
 
 .new-time {
   font-size: 24rpx;
-  color: #888;
+  color: var(--grey);
   position: absolute;
-  bottom: 10rpx;
+  bottom: 30rpx;
 }
 
 .civilization-list-li {
-  padding: 10rpx;
+  padding: 20rpx;
   border-bottom: 2rpx solid #ddd;
 }
 
@@ -78,4 +79,5 @@
 
 .civilization-time {
   font-size: 24rpx;
+  color: #999;
 }
