--- a/colorui/main.wxss
+++ b/colorui/main.wxss
@@ -14,18 +14,18 @@ page {
 	/* var属性兼容性 --> https://www.caniuse.com/#feat=css-variables */
 	/* 标准色 */
 	--red: #e54d42;
-	--orange: #f37b1d;
-	--yellow: #fbbd08;
-	--olive: #8dc63f;
-	--green: #39b54a;
+	--orange: #ff7044;
+	--yellow: #ff992e;
+	--olive: #3cb653;
+	--green: #01bf6c;
+	--black: #1e1e1e;
+	--grey: #8e8e8e;
 	--cyan: #1cbbb4;
 	--blue: #0081ff;
 	--purple: #6739b6;
 	--mauve: #9c26b0;
 	--pink: #e03997;
 	--brown: #a5673f;
-	--grey: #8799a3;
-	--black: #333333;
 	--darkGray: #666666;
 	--gray: #aaaaaa;
 	--ghostWhite: #f1f1f1;
@@ -3192,7 +3192,7 @@ scroll-view.cu-steps .cu-item {
 }
 
 .padding {
-	padding: 30rpx;
+	padding: 26rpx;
 }
 
 .padding-lg {
