--- a/colorui/main.wxss
+++ b/colorui/main.wxss
@@ -67,7 +67,6 @@ page {
 	--grayShadow: rgba(114, 130, 138, 0.2);
 	--blackShadow: rgba(26, 26, 26, 0.2);
 
-	background-color: var(--ghostWhite);
 	font-size: 28rpx;
 	color: var(--black);
 	font-family: Helvetica Neue, Helvetica, sans-serif;
@@ -3756,6 +3755,10 @@ scroll-view.cu-steps .cu-item {
 
 .bg-video {
 	position: relative;
+}
+
+.bg-main {
+	background: #f1f3f7;
 }
 
 .bg-video video {
