--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -2,23 +2,18 @@ page {
   background: #fff;
 }
 .personal-info {
-  background: #eee;
+  background: #201717;
+  color: #706259;
   padding: 60rpx 20rpx;
 }
 .personal-info>view {
   margin-right: 20rpx;
 }
-.personal .i-avatar-big {
-  width: 120rpx;
-  height: 120rpx;
-  line-height: 120rpx;
-  border-radius: 60rpx;
-  border: 1px solid #222;
-}
 .team-list {
-  padding: 20rpx;
-  border-bottom: 2rpx solid #ddd;
+  padding: 20rpx 26rpx;
+  background: #fff;
+  border-radius: 13rpx;
 }
-.personal .i-avatar {
-  border: 1px solid #222;
+.team-list + .team-list {
+  margin-top: 20rpx;
 }
