--- a/pages/volunteer/activity.wxml
+++ b/pages/volunteer/activity.wxml
@@ -1,33 +1,34 @@
 <view class="container activity">
-  <view class='text-center text-bold text-xl'>{{activity.name}}</view>
-  <view class='center mt20 fr'>
+  <view class='text-bold text-xl text-black mb20'>{{activity.name}}</view>
+  <view class='fr'>
     <wxs src="../../utils/filter.wxs" module="filter"></wxs>
-    <view class='cu-tag line-blue'>{{filter.toStatus(activity.join_status)}}</view>
+    <view class='cu-tag {{filter.toJoinClass(activity.join_status)}}'>{{filter.joinStatus(activity.join_status)}}</view>
   </view>
-  <view class='user-info' style='padding-left: 40rpx;'>
-    <image class='cu-avatar round' src="{{activity.address}}"></image>
+  <view class='user-info'>
+    <image class='cu-avatar round sm' src="{{activity.avatar}}"></image>
     <text>{{activity.team_name}}</text>
   </view>
-  <view class='module-title'>【基本信息】</view>
+  <view class='module-title'>[ 基本信息 ]</view>
   <view class='ul'>
-    <view>活动地点  {{activity.address}}</view>
-    <view>报名上限  {{activity.max}}</view>
-    <view>服务时长  {{activity.time}}</view>
-    <view>开始时间  {{activity.start_time}}</view>
-    <view>结束时间  {{activity.end_time}}</view>
+    <view><text>活动地点</text>{{activity.address}}</view>
+    <view><text>报名上限</text>{{activity.max}}人</view>
+    <view><text>服务时长</text>{{activity.time}}小时</view>
+    <view><text>开始时间</text>{{activity.start_time}}</view>
+    <view><text>结束时间</text>{{activity.end_time}}</view>
   </view>
-  <view class='module-title'>【活动内容】</view>
+  <view class='module-title'>[ 活动内容 ]</view>
   <view class='ul'>
     <import src="/wxParse/wxParse.wxml" />
     <template is="wxParse" data="{{wxParseData:article.nodes}}" />
   </view>
-  <view class='module-title'>【我的活动状态】</view>
+  <view class='module-title'>[ 我的活动状态 ]</view>
   <view class='ul'>
-    <view>报名状态  {{filter.joinStatus(activity.join_status)}}</view>
-    <view>签到状态  {{filter.signStatus(activity.sign_status)}}</view>
-    <view>新增活跃  {{activity.amount}} / {{activity.time}}</view>
+    <view><text>报名状态</text>{{filter.joinStatus(activity.join_status)}}</view>
+    <view><text>签到状态</text>{{filter.signStatus(activity.sign_status)}}</view>
+    <view><text>新增活跃</text>{{activity.amount}} / {{activity.time}}</view>
   </view>
-  <view class='center mt20'>
-    <button class='cu-btn bg-blue round shadow' bindtap="join">我要报名</button>
+  <view class='center mt20' wx:if="{{activity.join_status == 2 && activity.status == 1}}">
+    <button class='cu-btn bg-orange round shadow w100' bindtap="join">我要报名</button>
   </view>
 </view>
+<i-toast id="toast" />
