--- a/app.wxss
+++ b/app.wxss
@@ -38,7 +38,8 @@ page {
 
 .user-info {
   color: var(--balck);
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
 }
 
 .user-info .cu-avatar {
@@ -47,6 +48,8 @@ page {
 
 .user-info .cu-avatar + text {
   font-size: 28rpx;
+  height: 48rpx;
+  line-height: 48rpx;
 }
 
 .module-title {
