--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -1,6 +1,3 @@
-page {
-  background: #fff;
-}
 .personal-info {
   background: #201717;
   color: #706259;
@@ -16,4 +13,44 @@ page {
 }
 .team-list + .team-list {
   margin-top: 20rpx;
+}
+.canvasBox{
+  height: 380rpx;
+  position: relative;
+  background-color: #f5f5f5;
+}
+/* .bigCircle{
+  width: 380rpx;
+  height: 380rpx;
+  border-radius: 50%;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto auto;
+  background-color: #3c342f;
+} */
+/* .littleCircle{
+  width: 340rpx;
+  height: 340rpx;
+  border-radius: 50%;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto auto;
+  background-color: #201717;
+} */
+.canvas{
+  width: 380rpx;
+  height: 380rpx;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto auto;
+  z-index: 99;
 }
