--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,13 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<!-- index.wxml -->
+<view class="main-index">
+  <i-modal visible="{{ visible }}" show-ok="{{false}}" show-cancel="{{false}}">
+  <view style="padding: 0 20rpx;">
+    <view class="text-black text-bold text-left" style="font-size: 16px;">欢迎来到荔城文明实践</view>
+    <view class="text-left mt20 mb20" style="font-size: 14px;">请授权登录，获取完整的体验</view>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="dialog-footer" style="font-size: 14px;">
+    <button class="text-grey" bindtap="bindViewTap">取消</button>
+    <button class="text-green" open-type="getUserInfo" bindgetuserinfo="getUserInfo">确定</button>
   </view>
+</i-modal>
 </view>
