--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,21 +1,20 @@
 /**index.wxss**/
-.userinfo {
+.dialog-footer {
+  position: relative;
+  line-height: 32px;
+  min-height: 32px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  border-top: 1px solid #ddd;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.dialog-footer > button {
+  flex: 1;
+  background: #fff;
+  height: 32px;
+  line-height: 32px;
+  font-size: 28rpx;
 }
-
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+button::after {
+  border-radius: 0;
+  border: none;
 }
