--- a/pages/civilizationMap/civilizationMap.wxml
+++ b/pages/civilizationMap/civilizationMap.wxml
@@ -1,4 +1,7 @@
-
 <view class="container">
-  
+  <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="20" markers="{{markers}}" bindmarkertap="markertap" show-location style="width: 100%; height: 300px;"></map>
+  <view >
+    <view >礼堂</view>
+    <view >队伍</view>
+  </view>
 </view>
