--- a/pages/civilizationMap/civilizationMap.wxml
+++ b/pages/civilizationMap/civilizationMap.wxml
@@ -1,11 +1,11 @@
-<view class="container">
-  <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="20" markers="{{markers}}" bindmarkertap="markertap" show-location style="width: 100%; height: 300px;"></map>
-  <view class="flex" style="height: 268rpx;padding: 34rpx;">
-    <navigator class="flex-sub radius" style="margin-right: 14rpx;height: 100%;" url="./hall">
-      <image class="w100" src="/static/litang.png" style="height: 100%;"></image>
-    </navigator>
-    <navigator class="flex-sub radius" style="margin-left: 14rpx;height: 100%;" url="./team">
-      <image class="w100" src="/static/team.png"  style="height: 100%;"></image>
-    </navigator>
-  </view>
+<view style="position: fixed;height: 100%;width: 100%;padding-bottom:268rpx;">
+  <map id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="20" markers="{{markers}}" bindmarkertap="markertap" show-location style="width: 100%; height: 100%;"></map>
+</view>
+<view class="flex bg-white w100" style="position:fixed;bottom:0;height: 268rpx;padding: 34rpx;">
+  <navigator class="flex-sub radius" style="margin-right: 14rpx;height: 100%;" url="./hall">
+    <image class="w100" src="/static/litang.png" style="height: 100%;"></image>
+  </navigator>
+  <navigator class="flex-sub radius" style="margin-left: 14rpx;height: 100%;" url="./team">
+    <image class="w100" src="/static/team.png" style="height: 100%;"></image>
+  </navigator>
 </view>
