--- a/pages/civilizationMap/hall.wxss
+++ b/pages/civilizationMap/hall.wxss
@@ -1,14 +1,20 @@
+page {
+  background: #f1f3f7;
+}
 .hall-list-li {
   background: #fff;
-  height: 220rpx;
+  height: 200rpx;
   padding: 20rpx;
   border-radius: 13rpx;
 }
 
+.hall-list-li .img-box {
+  width: 160rpx;
+}
+
 .hall-list-li image {
-  width: 270rpx;
-  height: 180rpx;
-  border-radius: 10rpx;
+  width: 100%;
+  height: 160rpx;
 }
 
 .hall-list-li + .hall-list-li {
