--- a/pages/civilizationMap/hallDetail.wxml
+++ b/pages/civilizationMap/hallDetail.wxml
@@ -1,21 +1,20 @@
 <view class="container padding">
   <view>
     <view class="text-bold text-xl text-black" style='padding-bottom: 20rpx;'>{{info.name}}</view>
-    <view >
-      <image src="{{info.image}}" />
+    <image src="{{info.image}}" style="width: 100%;height: 480rpx;" />
+    <view class='ul' style="line-height: 1.5;">
+      <view>
+        <text>地　　点</text>{{info.address}}</view>
+      <view>
+        <text><text style="letter-spacing: 14rpx;">联系</text>人</text>{{info.contact_name}}</view>
+      <view>
+        <text>联系电话</text><text style="color: #3171ff;text-decoration: underline;" bindtap='callUp'>{{info.contact_phone}}</text></view>
     </view>
-    <view >
-      <view class='ul' style="line-height: 2;">
-    <view><text>地点</text>{{info.address}}</view>
-    <view><text>联系人</text>{{info.contact_name}}</view>
-    <view><text>联系电话</text>{{info.contact_phone}}</view>
   </view>
-    </view>
-    <view class="module-title">[ 简介 ]</view>
-    <view >
-      {{info.desc}}
-      <!-- <import src="/wxParse/wxParse.wxml" />
+  <view class="module-title">[ 简介 ]</view>
+  <view>
+    {{info.desc}}
+    <!-- <import src="/wxParse/wxParse.wxml" />
       <template is="wxParse" data="{{wxParseData:article.nodes}}" /> -->
-    </view>
   </view>
 </view>
